crates/jekko-tui/tests/snapshots/inline_snapshots__boot_block_120_cols.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
 ✻ Welcome to JEKKO

   /help for shortcuts, /jankurai to audit, /status for setup
