crates/jekko-tui/tests/snapshots/inline_snapshots__bottom_chrome_full_80x24.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---

◉ Working (1m 5s • esc to interrupt)
▸▸ bypass permissions · 2 local agents · ↓ to manage

›

claude-opus-4-7 · high · ~/code/jekko · main
