crates/jekko-tui/tests/snapshots/inline_snapshots__bottom_chrome_idle_no_strip_80x24.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---

▸▸ bypass permissions · 2 local agents · ↓ to manage

›

claude-opus-4-7 · high · ~/code/jekko · main
