crates/jekko-tui/tests/snapshots/inline_snapshots__bottom_chrome_narrow_40x24.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---

◉ Working (5s • esc to interrupt) · 1 b…
▸▸ bypass permissions · 2 local agents

›

claude-opus-4-7 · high · ~/code/jekko
