crates/jekko-tui/tests/snapshots/inline_snapshots__bottom_chrome_narrow_60x24.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---

◉ Working (5s • esc to interrupt)
▸▸ bypass permissions · 2 local agents · ↓ to manage

›

claude-opus-4-7 · high · ~/code/jekko · main
