crates/jekko-tui/tests/snapshots/inline_snapshots__daemon_status_notice.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
assertion_line: 133
expression: out
---
│ warn daemon offline: session_1 · retrying
