crates/jekko-tui/tests/snapshots/inline_snapshots__diff_added_context_removed.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
● Edit(src/main.rs)
  482 482   fn main() {
      483 +     println!("hello");
  484     -     todo!();
