crates/jekko-tui/tests/snapshots/inline_snapshots__mention_popup_cursor_navigation.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
 @ files  (6/6)
   src/main.rs
 › src/lib.rs
   src/inline_runtime.rs
────────────────────────────────────────────────────────────────────────────────
› @
────────────────────────────────────────────────────────────────────────────────
 ↑/↓ select  ⏎ insert  ⇥ complete  Esc close
