crates/jekko-tui/tests/snapshots/inline_snapshots__mention_popup_no_matches.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
 @ files  (0/6)
   (no matches)


────────────────────────────────────────────────────────────────────────────────
› @zzznope
────────────────────────────────────────────────────────────────────────────────
 ↑/↓ select  ⏎ insert  ⇥ complete  Esc close
