crates/jekko-tui/tests/snapshots/inline_snapshots__mention_popup_substring_filter.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
 @ files  (2/6)
 › src/inline_runtime.rs
   crates/jekko-tui/src/inline_runtime.rs

────────────────────────────────────────────────────────────────────────────────
› @inli
────────────────────────────────────────────────────────────────────────────────
 ↑/↓ select  ⏎ insert  ⇥ complete  Esc close
