crates/jekko-tui/tests/snapshots/inline_snapshots__permission_chip_once_always_reject.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
assertion_line: 146
expression: out
---
│ permission bash · session_1 · perm_1 · ls, pwd · always: ls [once] [always] [r
